[package]
name = "progrust"
version = "0.1.0"
edition = "2018"

readme = "README.md"
repository = "https://github.com/a-poor/progrust"
homepage = "https://github.com/a-poor/progrust"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
