[package]
name = "progrust"
version = "0.2.1"
edition = "2018"
description = "A minimalist tool for creating progress bars with Rust."

readme = "README.md"
repository = "https://github.com/a-poor/progrust"
homepage = "https://github.com/a-poor/progrust"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
